# GDSC_FastAPI

./: ReadME.md  main.py  pyproject.toml  run.py
api/: infor.py  items.py  users.py
crud/: users.py
database/: fake_db.py  generic.py
models/: base.py  item.py  users.py
schemas/: users.py
setting/: .env.dev  config.py
sync/api/: depends.py  infor.py  users.py
sync/crud/: users.py
