[tool.poetry]
name = "it-fastapi-hw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
psycopg2 = "^2.9.9"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.23"
cryptography = "^41.0.7"
asyncpg = "^0.29.0"
greenlet = "^3.0.1"
aiomysql = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
